fix: I restyled the upload image and remove image buttons.
- the "upload image" text is not centered.

--- a/src/react-components/CreatePost/styles.css
+++ b/src/react-components/CreatePost/styles.css
@@ -109,3 +109,36 @@
 	width: 500px;
 }
 
+#uploadImageButton {
+	margin-top: 1%;
+	margin-left: 26%;
+	margin-bottom: 4%;
+	display: block;
+	width: 400px;
+	height: 40px;
+	border-radius: 4px;
+	background-color: #f2a365;
+	border: solid 1px transparent;
+	color: #ececec;
+	font-size: 18px;
+	font-weight: 300;
+	cursor: pointer;
+	transition: all 0.1s ease-in-out;
+}
+
+#removeImageButton {
+	margin-top: 1%;
+	margin-left: 26%;
+	margin-bottom: 4%;
+	display: block;
+	width: 400px;
+	height: 40px;
+	border-radius: 4px;
+	background-color: #f2a365;
+	border: solid 1px transparent;
+	color: #ececec;
+	font-size: 18px;
+	font-weight: 300;
+	cursor: pointer;
+	transition: all 0.1s ease-in-out;
+}
